syntax = "proto3";

package yandex.cloud.priv.cic.v1.inner.partner;

import "yandex/cloud/api/operation.proto";

import "yandex/cloud/priv/operation/operation.proto";
import "yandex/cloud/priv/validation.proto";

import "yandex/cloud/priv/cic/v1/inner/partner/partner.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/cic/v1/inner/partner;cic";
option java_outer_classname = "CICPRTS";

service PartnerService {

  rpc Get (GetPartnerRequest) returns (Partner);

  rpc List (ListPartnerRequest) returns (ListPartnerResponse);

  rpc Create (Partner) returns (operation.Operation) {
    option (yandex.cloud.api.operation) = {
      metadata: "CreatePartnerMetadata"
      response: "Partner"
    };
  }

  rpc Update (Partner) returns (operation.Operation) {
    option (yandex.cloud.api.operation) = {
      metadata: "UpdatePartnerMetadata"
      response: "Partner"
    };
  }

  rpc Delete (DeletePartnerRequest) returns (operation.Operation) {
    option (yandex.cloud.api.operation) = {
      metadata: "DeletePartnerMetadata"
      response: "google.protobuf.Empty"
    };
  }

  rpc ListOperations (ListPartnerOperationsRequest) returns (ListPartnerOperationsResponse);
}

message GetPartnerRequest {
  string partner_id = 1 [(required) = true, (length) = "<=50"];
}

message ListPartnerRequest {
  string folder_id = 1 [(required) = true, (length) = "<=50"];
  int64 page_size = 2;
  string page_token = 3;
  string filter = 4;
}

message ListPartnerResponse {
  repeated Partner partners = 1;
  string next_page_token = 2;
}

message CreatePartnerMetadata {
  string partner_id = 1;
}

message UpdatePartnerMetadata {
  string partner_id = 1;
}

message DeletePartnerRequest {
  string partner_id = 1 [(required) = true, (length) = "<=50"];
}

message DeletePartnerMetadata {
  string partner_id = 1;
}

message ListPartnerOperationsRequest {
  string partner_id = 1 [(required) = true, (length) = "<=50"];
  int64 page_size = 2;
  string page_token = 3;
}

message ListPartnerOperationsResponse {
  repeated operation.Operation operations = 1;
  string next_page_token = 2;
}
