syntax = "proto3";

package yandex.cloud.priv.marketplace.licenseserver.v1.license;

import "google/protobuf/timestamp.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/marketplace/licenseserver/v1/license;license";
option java_package = "LTV";

message Template {
    string id = 1;
    string version_id = 2;
    string name = 3;
    string publisher_id = 4;
    string product_id = 5;
    string tariff_id = 6;
    string license_sku_id = 7;
    string period = 8;
    google.protobuf.Timestamp created_at = 9;
    google.protobuf.Timestamp updated_at = 10;
    State state = 11;

    enum State {
        STATE_UNSPECIFIED = 0;
        PENDING = 1;
        ACTIVE = 2;
        DEPRECATED = 3;
        DELETED = 4;
    }
}

message ListTemplateResponse {
    repeated Template templates = 1;
    string next_page_token = 2;
}
